Add the Camera App tested feature with the multiple camera compatiblity! One sweat-and-tear thing to be noted here is the importance of EMGU CV's version. I recommend to install and configure the old version of 2.2

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ bin/
 obj/
 .vs/
 .suo
+/CameraCaptureWithHAARCascade/CameraCaptureOriginal.resx
+/CameraCaptureWithHAARCascade/CameraCaptureOriginal.Designer.cs
+/CameraCaptureWithHAARCascade/CameraCaptureOriginal.cs
