--- a/SocialMediaIntegration/App.config
+++ b/SocialMediaIntegration/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <section name="castle" >
+  <section name="castle" />
   <appSettings>
     <add key="EnableSqlDependency" value= "true" />
     <add key="ApplicationId" value= "1156635007734759" />
