--- a/SocialMediaIntegration/FacebookIntegration.csproj
+++ b/SocialMediaIntegration/FacebookIntegration.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SocialMediaIntegration</RootNamespace>
-    <AssemblyName>SocialMediaIntegration</AssemblyName>
+    <AssemblyName>FacebookIntegration</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
